[package]
name = "termdraw"
version = "0.1.0"
# edition 2024 requires Rust 1.85+. Switch to "2021" if using an older toolchain.
edition = "2024"
description = "Terminal-based pixel art editor"
license = "MIT"
repository = "https://github.com/Himanshu121865/termdraw"
readme = "README.md"
keywords = ["pixel-art", "editor", "terminal", "ratatui"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
# Crossterm provides cross-platform terminal control: raw mode, alternate screen,
# mouse capture, and keyboard/mouse event reading.
crossterm = "0.29"

# Ratatui is an immediate-mode terminal UI framework. We use it for layout,
# rendering widgets (Canvas, Block, Paragraph), and styling (Color, Style).
ratatui = "0.30"

# Image crate is used only for PNG export. We disable default features and
# enable only the "png" feature to keep the dependency tree small.
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "bmp",
] }

clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
